--- a/index.html
+++ b/index.html
@@ -4,10 +4,45 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Jessica </title>
+    <title>Jessica medalha </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
+<body>
+    <header>
+        <img src="logo1.png " alt="foto jessica" class="foto">
+        <h1 id="title"> jess</h1>
 
+    </header>
+
+    <section>
+        <header>
+            <h2 class="subtitle">posts</h2>
+        </header>
+        <article class="posti">
+            <header>
+                <h3 class="post_title">post 1</h3>
+                <img src="foto2.jpg " alt="foto jessica" class="imagem">
+            </header>
+            <p class="post_conteudo">
+                meuuuuuuu deusss <a href="https://github.com/jessicamedalha/web-site"> que merd</a> vamo que vamo <a href="https://github.com/jessicamedalha/web-site" target="_blank"> brasil</a>
+            </p>
+        </article>
+    </section>
+    <footer>
+        <ul class="lista">
+            <li>
+                <a href="mailto:jessicamedalhnha@gmail.com"> jessicamedalhnha@gmail.com</a>
+            </li>
+            <li>
+                <a href="https://github.com/jessicamedalha/web-site"> GITHUB</a>
+
+            </li>
+        </ul>
+
+    </footer>
+
+</body>
 
 
 </html>
